fix: use smaller fonts for longer node names
Added use of a couple more progressively smaller font sizes when node name lengths exceed certain limits.
Truncated the node name when it exceeds a certain absolute maximum length that can fit visibly within a node.

SPWEB-4413

--- a/src/Node/style.css
+++ b/src/Node/style.css
@@ -39,6 +39,14 @@
   font-size: smaller;
 }
 
+.extraLongNodeName {
+  font-size: x-small;
+}
+
+.superLongNodeName {
+  font-size: xx-small;
+}
+
 .nodeAttributesBase {
   fill: #777;
   stroke: #777;
